--- a/css/scss/general.scss
+++ b/css/scss/general.scss
@@ -18,6 +18,7 @@
 @import 'parts/content';
 @import 'parts/header';
 @import 'parts/mainslider';
+@import 'parts/buttons';
 @import 'parts/popup';
 @import 'parts/slider';
 
