Create services.html. Fix heading

--- a/css/scss/base/_mixins.scss
+++ b/css/scss/base/_mixins.scss
@@ -37,7 +37,7 @@
 
 
 /* ------------------ flex ----------------- */
-@mixin flex($alignI: center, $justify: space-between, $direction: row, $wrap: nowrap  ) {
+@mixin flex($alignI: center, $justify: space-between, $direction: row, $wrap: wrap  ) {
     display: -webkit-box;
     display: -webkit-flex;
     display: -moz-flex;
