--- a/css/scss/parts/_viewport.scss
+++ b/css/scss/parts/_viewport.scss
@@ -16,5 +16,11 @@
 		&--full {
 			width: 100%;
 		}
+
+		&--media {
+			background-size: cover;
+			background-position: 50% 50%;
+			background-repeat: no-repeat;
+		}
 	}
 }
