--- a/css/scss/parts/_buttons.scss
+++ b/css/scss/parts/_buttons.scss
@@ -10,6 +10,13 @@
     text-transform: uppercase;
     -webkit-border-radius: 40px;
             border-radius: 40px;
+    -webkit-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+
+    &:hover {
+        background-color: #8A676B;
+    }
     &:before {
         content: "";
         display: inline-block;
@@ -21,5 +28,9 @@
         background-position: 50% 50%;
         background-repeat: no-repeat;
         margin-top: -2px;
+    }
+
+    &--send:before {
+        background-image: url("../images/airplane.png");
     }
 }
