google map integration

--- a/css/scss/parts/_page-contacts.scss
+++ b/css/scss/parts/_page-contacts.scss
@@ -102,3 +102,9 @@
 .icon-email { background-position: -5px -0px; width: 17px; height: 17px; margin-top: 2px;}
 .icon-phone { background-position: -5px -22px; width: 15px; height: 16px; margin-top: 1px;}
 .icon-pin { background-position: -5px -43px; width: 14px; height: 20px; }
+
+
+.map {
+	width: 100%;
+	height: 100%;
+}
