--- a/css/scss/parts/_mainslider.scss
+++ b/css/scss/parts/_mainslider.scss
@@ -36,6 +36,38 @@
             button {
                 margin-top: 40px;
             }
+            @media (max-width: 1100px) {
+                padding-left: 140px;
+                h2 {
+                    width: 95%;
+                    text-align: center;
+                    font: 32px/40px $pdb;
+                    margin: 10px auto;
+                }
+                p {
+                    width: 80%;
+                    margin: 10px auto;
+                    text-align: center;
+                }
+                button {
+                    margin: 20px auto;
+                }
+            }
+            @media (max-width: 600px) {
+                padding-left: 0px;
+                padding-top: 60px;
+                h2 {
+                    font: 28px/38px $pdb;
+                }
+                p {
+                    font-size: 14px;
+                }
+            }
+            @media (max-width: 400px) {
+                h2 {
+                    font: 24px/34px $pdb;
+                }
+            }
         }
     }
 }
