--- a/css/scss/parts/_rooms.scss
+++ b/css/scss/parts/_rooms.scss
@@ -1,11 +1,11 @@
 .rooms {
-    @include flex($justify: flex-start, $wrap: wrap);
+    @include flex($justify: center, $wrap: wrap);
     padding-top: 40px;
     margin-top: 45px;
     border-top: 1px solid #d7dbd9;
 }
 .room {
-    margin-right: 20px;
+    margin: 0 10px 90px 10px;
     background-color: #FFF;
     cursor: pointer;
     margin-bottom: 90px;
@@ -14,12 +14,18 @@
         -webkit-box-shadow: 0 0 20px rgba(0,0,0, .1);
         box-shadow: 0 0 20px rgba(0,0,0, .1); 
     }
-    &:nth-of-type(4n) {
-        margin-right: 0;
+    @media (max-width: 1100px) {
+        width: 300px;
     }
     &__img {
         height: 270px;
         position: relative;
+        img {
+            max-width: 100%;
+        }
+         @media (max-width: 1100px) {
+            height: 204px;
+        }
         &:before {
             content: "";
             display: block;
