--- a/css/scss/base/_settings.scss
+++ b/css/scss/base/_settings.scss
@@ -17,7 +17,8 @@ $pdb:			'Playfair Display Bold';
 
 // RESPONSIVE
 // ---------------------------
-
+$tablets:       'max-width: 991px';
+$phones:        'max-width: 767px';
 
 
 // TYPOGRAPHIC
