--- a/css/scss/parts/_page-contacts.scss
+++ b/css/scss/parts/_page-contacts.scss
@@ -8,6 +8,10 @@
 		@media (max-width: 1700px) {
 			width: 50%;
 		}
+
+		@media (max-width: 1300px) {
+			width: 100%;
+		}
 	}
 
 	&__info {
@@ -17,6 +21,11 @@
 
 		@media (max-width: 1700px) {
 			width: 50%;
+		}
+
+		@media (max-width: 1300px) {
+			width: 100%;
+			margin-bottom: 60px;
 		}
 
 		.address,
@@ -47,6 +56,10 @@
 		position: absolute;
 		bottom: 25px;
 		left: 0;
+
+		@media (max-width: 1300px) {
+			position: static;
+		}
 	}
 }
 
@@ -107,4 +120,9 @@
 .map {
 	width: 100%;
 	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
 }
