--- a/css/scss/parts/_slider.scss
+++ b/css/scss/parts/_slider.scss
@@ -7,6 +7,14 @@
 	position: relative;
 	margin-bottom: 0;
 
+	@media ($tablets) {
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+	}
+
 	.slide {
 		background-repeat: no-repeat;
 		background-position: 50% 50%;
@@ -24,6 +32,10 @@
 		border-radius: 50%;
 		overflow: hidden;
 
+		@media ($phones) {
+			bottom: 20px;
+		}
+
 		&:before {
 			font-family: unset;
 			color: $brown;
@@ -33,9 +45,17 @@
 
 		&.slick-prev {
 			left: 80px;
+
+			@media ($phones) {
+				left: 20px;
+			}
 		}
 		&.slick-next {
 			left: 150px;
+
+			@media ($phones) {
+				left: 90px;
+			}
 		}
 	}
 
@@ -46,5 +66,10 @@
 		color: #fff;
 		font-size: 35px;
 		font-family: $pdr;
+
+		@media ($phones) {
+			left: 20px;
+			bottom: 90px;
+		}
 	}
 }
