--- a/css/scss/parts/_viewport.scss
+++ b/css/scss/parts/_viewport.scss
@@ -6,6 +6,9 @@
 	@media ($tablets) {
 		height: auto;
 	}
+	@media ($tablets) and (orientation: portrait) {
+		height: 100%;
+	}
 
 	.column {
 		width: 50%;
@@ -36,6 +39,10 @@
 			background-position: 50% 50%;
 			background-repeat: no-repeat;
 			position: relative;
+
+			@media ($tablets) and (orientation: portrait) {
+				height: 100%;
+			}
 
 			@media ($tablets) {
 				&:after {
