--- a/css/scss/parts/_content.scss
+++ b/css/scss/parts/_content.scss
@@ -25,6 +25,15 @@
 			background-position: 50% 100%;
 			width: 7px;
 			height: 145px;
+			@media (max-height: 600px) {
+				height: 45px;
+			}
+			@media (max-width: 600px) {
+				height: 45px;
+			}
+		}
+		@media (max-width: 600px) {
+			margin-bottom: 40px;
 		}
 	}
 
