--- a/css/scss/parts/_header.scss
+++ b/css/scss/parts/_header.scss
@@ -5,10 +5,10 @@
     z-index: 1000;
     margin: 0;
     left: -200%;
-    padding: 140px 0 30px 80px;
+    padding: 0px 0 30px 80px;
     overflow: hidden;
     @media (max-width: 1100px) {
-        padding: 40px 0 30px 40px;
+        padding: 0px 0 30px 40px;
         width: 500px;
     }
     @media (max-width: 650px) {
@@ -16,7 +16,7 @@
     }
     @media (max-width: 600px) {
         width: 100%;
-        padding: 40px 0 30px 20px;
+        padding: 0px 0 30px 20px;
     }
     @include mh700 {
         
@@ -144,7 +144,7 @@
 /*  NAV STYLES  */
 .mainNav {
     text-align: left;
-    padding-top: 20px;
+    padding-top: 0px;
     &:before {
         content: "";
         display: block;
@@ -152,14 +152,20 @@
         background-position: 50% 100%;
         width: 6px;
         height: 145px;
-        position: absolute;
         bottom: 100%;
         left: 0;
+        @media (max-width: 1100px) {
+            height: 100px;
+        }
+        @media (max-width: 600px) {
+        }
     }
-    p {
+    .heading {
         font: 13px $mb;
         color: $brown;
         text-transform: uppercase;
+        position: relative;
+        padding-top: 10px;
     }
     ul {
         margin-top: 75px;
