--- a/css/general.css
+++ b/css/general.css
@@ -1227,13 +1227,13 @@ img.mfp-img {
   z-index: 1000;
   margin: 0;
   left: -200%;
-  padding: 140px 0 30px 80px;
+  padding: 0px 0 30px 80px;
   overflow: hidden;
   /*.................media.............*/
   /*.............end media..............*/ }
   @media (max-width: 1100px) {
     .sideMenu {
-      padding: 40px 0 30px 40px;
+      padding: 0px 0 30px 40px;
       width: 500px; } }
   @media (max-width: 650px) {
     .sideMenu {
@@ -1241,7 +1241,7 @@ img.mfp-img {
   @media (max-width: 600px) {
     .sideMenu {
       width: 100%;
-      padding: 40px 0 30px 20px; } }
+      padding: 0px 0 30px 20px; } }
   .sideMenu .wrapper {
     position: relative;
     z-index: 10;
@@ -1348,7 +1348,7 @@ img.mfp-img {
 /*  NAV STYLES  */
 .mainNav {
   text-align: left;
-  padding-top: 20px; }
+  padding-top: 0px; }
   .mainNav:before {
     content: "";
     display: block;
@@ -1356,13 +1356,17 @@ img.mfp-img {
     background-position: 50% 100%;
     width: 6px;
     height: 145px;
-    position: absolute;
     bottom: 100%;
     left: 0; }
-  .mainNav p {
+    @media (max-width: 1100px) {
+      .mainNav:before {
+        height: 100px; } }
+  .mainNav .heading {
     font: 13px "Muller Bold";
     color: #6A474B;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    position: relative;
+    padding-top: 10px; }
   .mainNav ul {
     margin-top: 75px;
     list-style-type: none;
@@ -2234,7 +2238,7 @@ img.mfp-img {
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  padding-top: 100px; }
+  padding-top: 80px; }
   .contacts__form {
     width: 440px; }
     @media (max-width: 1700px) {
