--- a/css/scss/parts/_header.scss
+++ b/css/scss/parts/_header.scss
@@ -1,6 +1,6 @@
 
 .sideMenu {
-    @include position(absolute, 0, auto, 0, 0);
+    @include position(fixed, 0, auto, 0, 0);
     width: 960px;
     z-index: 1000;
     margin: 0;
