--- a/css/general.css
+++ b/css/general.css
@@ -1930,7 +1930,7 @@ img.mfp-img {
           bottom: auto; } }
       .room__info__details .column {
         display: none; }
-      @media (max-width: 1100px) {
+      @media (max-width: 800px) {
         .room__info__details {
           padding-left: 100px; } }
       @media (max-width: 600px) {
@@ -1946,7 +1946,7 @@ img.mfp-img {
         margin-bottom: 0; }
         @media (max-width: 991px) {
           .room__info__details .roomslider {
-            height: 600px;
+            height: 100%;
             position: absolute;
             width: 100%;
             bottom: 0;
