--- a/css/scss/parts/_rooms.scss
+++ b/css/scss/parts/_rooms.scss
@@ -158,7 +158,7 @@
             .column {
                 display: none;
             }
-            @media (max-width: 1100px) {
+            @media (max-width: 800px) {
                 padding-left: 100px;
             }
             @media (max-width: 600px) {
@@ -175,7 +175,7 @@
                 position: relative;
                 margin-bottom: 0;
                 @media (max-width: 991px) {
-                    height: 600px;
+                    height: 100%;
                     position: absolute;
                     width: 100%;
                     bottom: 0;
