--- a/css/general.css
+++ b/css/general.css
@@ -1661,12 +1661,19 @@ img.mfp-img {
 @media (max-height: 800px) {
   .mainNav ul {
     padding-bottom: 40px;
+    margin-top: 40px;
   }
 }
 @media (max-height: 700px) {
   .mainNav ul {
     margin-top: 20px;
     padding-bottom: 20px;
+  }
+}
+@media (max-width: 1100px) {
+  .mainNav ul {
+    margin-top: 40px;
+    padding-bottom: 40px;
   }
 }
 .mainNav ul li a {
