--- a/css/scss/parts/_header.scss
+++ b/css/scss/parts/_header.scss
@@ -175,10 +175,15 @@
         border-bottom: 1px solid #888;
         @include mh800 {
             padding-bottom: 40px;
+            margin-top: 40px;
         }
         @include mh700 {
             margin-top: 20px;
             padding-bottom: 20px;
+        }
+        @media (max-width: 1100px) {
+           margin-top: 40px;
+           padding-bottom: 40px;
         }
         li {
             a {
