--- a/css/scss/parts/_header.scss
+++ b/css/scss/parts/_header.scss
@@ -78,6 +78,7 @@
             }
             @include mh800 {
                 margin: 0 0px 0px 0px;
+                height: 20px;
             }
             @media (max-height: 600px) {
                 position: static;
