--- a/css/scss/parts/_slider.scss
+++ b/css/scss/parts/_slider.scss
@@ -67,6 +67,10 @@
 		font-size: 35px;
 		font-family: $pdr;
 
+		span {
+			color: #fff;
+		}
+
 		@media ($phones) {
 			left: 20px;
 			bottom: 90px;
