--- a/css/scss/parts/_buttons.scss
+++ b/css/scss/parts/_buttons.scss
@@ -34,3 +34,7 @@
         background-image: url("../images/airplane.png");
     }
 }
+a.button {
+    line-height: 50px;
+    display: inline-block;
+}
