--- a/css/general.css
+++ b/css/general.css
@@ -408,7 +408,7 @@ main {
     padding-left: 100px;
   }
 }
-@media (max-width: 600px) {
+@media (max-width: 750px) {
   main {
     padding-left: 0px;
     padding-top: 80px;
@@ -1492,7 +1492,7 @@ img.mfp-img {
     width: 300px;
   }
 }
-@media (max-width: 600px) {
+@media (max-width: 750px) {
   .sideMenu {
     width: 100%;
     padding: 0px 0 30px 20px;
@@ -1558,13 +1558,13 @@ img.mfp-img {
     height: 20px;
   }
 }
-@media (max-height: 600px) {
+@media (max-height: 750px) {
   .sideMenu footer {
     position: static;
     margin-top: 20px;
   }
 }
-@media (max-width: 600px) {
+@media (max-width: 750px) {
   .sideMenu footer {
     padding-right: 0;
   }
@@ -1704,7 +1704,7 @@ img.mfp-img {
     font: 24px/45px "Playfair Display Bold";
   }
 }
-@media (max-height: 600px) {
+@media (max-height: 750px) {
   .mainNav ul li a {
     font: 22px/45px "Playfair Display Bold";
   }
@@ -1738,7 +1738,7 @@ img.mfp-img {
     width: 100px;
   }
 }
-@media (max-width: 600px) {
+@media (max-width: 750px) {
   .sidebar {
     width: 100%;
     right: auto;
@@ -1776,7 +1776,7 @@ img.mfp-img {
     left: 60px;
   }
 }
-@media (max-width: 600px) {
+@media (max-width: 750px) {
   .sidebar .copyright {
     display: none;
   }
@@ -1943,7 +1943,7 @@ img.mfp-img {
   /*.................media.............*/
   /*..............end media.............*/
 }
-@media (max-width: 600px) {
+@media (max-width: 750px) {
   .menu-button {
     left: auto;
     right: 20px;
@@ -2093,9 +2093,15 @@ img.mfp-img {
   -o-background-size: cover;
   background-size: cover;
 }
-.mainslider__slide .wrap {
+
+.indexMain {
+  position: relative;
+  z-index: 10;
+  background: transparent;
+}
+.indexMain .wrap {
   height: 100%;
-  padding-left: 220px;
+  padding-left: 60px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-flex;
@@ -2118,59 +2124,51 @@ img.mfp-img {
   color: #FFF;
   text-align: left;
 }
-.mainslider__slide .wrap h2 {
+.indexMain .wrap h2 {
   font: 40px/50px "Playfair Display Bold";
   margin-bottom: 40px;
   width: 900px;
   text-shadow: 1px 0 1px rgba(0, 0, 0, 0.15);
 }
-.mainslider__slide .wrap p {
+.indexMain .wrap p {
   font: 16px/20px "Muller Regular";
-  width: 600px;
+  width: 750px;
   text-shadow: 1px 0 1px rgba(0, 0, 0, 0.15);
   font-weight: normal;
 }
-.mainslider__slide .wrap button {
+.indexMain .wrap .button {
   margin-top: 40px;
 }
 @media (max-width: 1100px) {
-  .mainslider__slide .wrap {
-    padding-left: 140px;
-  }
-  .mainslider__slide .wrap h2 {
+  .indexMain .wrap h2 {
     width: 95%;
     text-align: center;
     font: 32px/40px "Playfair Display Bold";
     margin: 10px auto;
   }
-  .mainslider__slide .wrap p {
+  .indexMain .wrap p {
     width: 80%;
     margin: 10px auto;
     text-align: center;
   }
-  .mainslider__slide .wrap button {
+  .indexMain .wrap button {
     margin: 20px auto;
   }
 }
-@media (max-width: 800px) {
-  .mainslider__slide .wrap {
-    padding-left: 100px;
-  }
-}
-@media (max-width: 600px) {
-  .mainslider__slide .wrap {
+@media (max-width: 750px) {
+  .indexMain .wrap {
     padding-left: 0px;
     padding-top: 60px;
   }
-  .mainslider__slide .wrap h2 {
+  .indexMain .wrap h2 {
     font: 28px/38px "Playfair Display Bold";
   }
-  .mainslider__slide .wrap p {
+  .indexMain .wrap p {
     font-size: 14px;
   }
 }
 @media (max-width: 400px) {
-  .mainslider__slide .wrap h2 {
+  .indexMain .wrap h2 {
     font: 24px/34px "Playfair Display Bold";
   }
 }
@@ -2216,7 +2214,7 @@ img.mfp-img {
     width: 300px;
   }
 }
-@media (max-width: 600px) {
+@media (max-width: 750px) {
   .room {
     margin-bottom: 60px;
   }
@@ -2292,7 +2290,7 @@ img.mfp-img {
   -ms-transition: all 0.2s;
   transition: all 0.2s;
 }
-@media (max-width: 600px) {
+@media (max-width: 750px) {
   .room__info {
     padding: 15px 14px 10px;
   }
@@ -2303,7 +2301,7 @@ img.mfp-img {
   border-top: 1px solid #d7dbd9;
   font-size: 16px;
 }
-@media (max-width: 600px) {
+@media (max-width: 750px) {
   .room__info__include {
     font-size: 14px;
   }
@@ -2375,7 +2373,7 @@ img.mfp-img {
     padding-left: 100px;
   }
 }
-@media (max-width: 600px) {
+@media (max-width: 750px) {
   .room__info__details {
     padding-left: 0px;
   }
@@ -2491,6 +2489,11 @@ img.mfp-img {
 }
 .button--send:before {
   background-image: url("../images/airplane.png");
+}
+
+a.button {
+  line-height: 50px;
+  display: inline-block;
 }
 
 .slick-slider .slick-track,
